--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>OVI Diseño de Sitios Web</title>
-        <link rel="stylesheet" type="text/css" href="menu.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
             <section id="main_container">
